--- a/html/template/ecommerce.html
+++ b/html/template/ecommerce.html
@@ -1034,11 +1034,11 @@
                           </div>
                           <div> 
                             <h5 class="text-base font-bold text-content3 5xl:text-sm  2xl:text-3xs xl:text-base">Total Sells</h5>
-                            <h2 class="text-2xl font-extrabold text-title 5xl:text-sm 2xl:text-3xs xl:text-2xl">20.79</h2>
+                            <h2 class="text-2xl font-extrabold text-title 5xl:text-sm 2xl:text-3xs xl:text-base">20.79</h2>
                           </div>
                         </div>
                       </div>
-                      <div class="block col-span-5 5xl:col-span-4 2xl:col-span-5 2lg:col-span-4 3sm:col-span-3 ">
+                      <div class="block col-span-5 5xl:col-span-4 2xl:col-span-5 2lg:col-span-4 3sm:col-span-3">
                         <div id="totalSellBarChart"></div>
                       </div>
                     </div>
@@ -1068,11 +1068,11 @@
                           </div>
                           <div> 
                             <h5 class="text-base font-bold text-content3 5xl:text-sm  2xl:text-3xs xl:text-base">Total Customer</h5>
-                            <h2 class="text-2xl font-extrabold text-title 5xl:text-sm 2xl:text-3xs xl:text-2xl">10.341</h2>
+                            <h2 class="text-2xl font-extrabold text-title 5xl:text-sm 2xl:text-3xs xl:text-base">10.341</h2>
                           </div>
                         </div>
                       </div>
-                      <div class="block col-span-5 5xl:col-span-4 2xl:col-span-5 2lg:col-span-4 3sm:col-span-3 ">
+                      <div class="block col-span-5 5xl:col-span-4 2xl:col-span-5 2lg:col-span-4 3sm:col-span-3">
                         <div id="totalCustomerLineChart"></div>
                       </div>
                     </div>
@@ -1102,11 +1102,11 @@
                           </div>
                           <div> 
                             <h5 class="text-base font-bold text-content3 5xl:text-sm  2xl:text-3xs xl:text-base">Total Expenses</h5>
-                            <h2 class="text-2xl font-extrabold text-title 5xl:text-sm 2xl:text-3xs xl:text-2xl">23.28</h2>
+                            <h2 class="text-2xl font-extrabold text-title 5xl:text-sm 2xl:text-3xs xl:text-base">23.28</h2>
                           </div>
                         </div>
                       </div>
-                      <div class="block col-span-5 5xl:col-span-4 2xl:col-span-5 2lg:col-span-4 3sm:col-span-3 ">
+                      <div class="block col-span-5 5xl:col-span-4 2xl:col-span-5 2lg:col-span-4 3sm:col-span-3">
                         <div id="totalExpensesLineChart"></div>
                       </div>
                     </div>
@@ -1136,11 +1136,11 @@
                           </div>
                           <div> 
                             <h5 class="text-base font-bold text-content3 5xl:text-sm  2xl:text-3xs xl:text-base">Total Order</h5>
-                            <h2 class="text-2xl font-extrabold text-title 5xl:text-sm 2xl:text-3xs xl:text-2xl">21.745</h2>
+                            <h2 class="text-2xl font-extrabold text-title 5xl:text-sm 2xl:text-3xs xl:text-base">21.745</h2>
                           </div>
                         </div>
                       </div>
-                      <div class="block col-span-5 5xl:col-span-4 2xl:col-span-5 2lg:col-span-4 3sm:col-span-3 ">
+                      <div class="block col-span-5 5xl:col-span-4 2xl:col-span-5 2lg:col-span-4 3sm:col-span-3">
                         <div class="progress progress-striped active mb-[38px] mt-[22px]">
                           <div class="progress-bar progress-bar-warning" role="progressbar " style="width: 70%;"></div>
                         </div>
@@ -1162,10 +1162,10 @@
               </div>
             </div>
             <div class="col-span-6 xl:col-span-6 xl3:col-span-12">
-              <div class="card gap-0">
+              <div class="card gap-0"> 
                 <div class="card-header"> 
-                  <div class="flex justify-between w-full flex-wrap gap-2 items-center">
-                    <h3 class="text-lg font-bold leading-none text-title">Sales Summary ( Jun 2023)</h3>
+                  <div class="flex justify-between w-full flex-wrap gap-2 items-center 2xl:flex-nowrap 2xl:gap-1 2sm:flex-wrap 2sm:flex-wrap 2sm:gap-2">
+                    <h3 class="text-lg font-bold leading-none text-title">Sales Summary (Jun 2023)</h3>
                     <div class="flex items-center gap-4"> 
                       <div class="radialBar-legend"> 
                         <div class="w-full px-2">
@@ -1209,7 +1209,7 @@
                   <div class="flex justify-between w-full flex-wrap gap-2 items-center">
                     <h3 class="text-lg font-bold leading-none text-title">Order Detail</h3>
                     <div class="flex items-center gap-4"> 
-                      <div class="search-box relative"> 
+                      <div class="sm:hidden search-box relative"> 
                         <input class="border border-border-light dark:bg-sidebar-dark2 dark:border-border-dark rounded-5 w-full py-[8px] pr-[25px] pl-[48px] rtl:pl-[25px] rtl:pr-[48px] text-xs font-semibold text-title dark:text-white" placeholder="Search..." type="search">
                         <svg class="xl:hidden w-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] h-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] stroke-title dark:stroke-white top-1/2 -translate-y-1/2 left-[17px] rtl:left-unset rtl:right-[17px] absolute dark:stroke-white"> 
                           <use href="../../assets/svg/sprite.svg#Search"> </use>
@@ -1527,24 +1527,27 @@
                   <div class="radialBar-legend">
                     <div class="w-full px-3 border-r border-border-light dark:border-border-dark last:border-none rtl:border-r-0 rtl:border-l"> 
                       <div class="radialBar-legend-series"> <span class="radialBar-legend-marker primary"></span>
-                        <p class="radialBar-legend-text text-3xs text-title">Current Customers</p>
+                        <p class="2xl:line-clamp-1 2xl:hidden lg:block 2sm:hidden radialBar-legend-text text-3xs text-title">Current Customers</p>
+                        <p class="2xl:line-clamp-1 hidden lg:hidden  2sm:block radialBar-legend-text text-3xs text-title">Current </p>
                       </div><small class="text-xs text-content3 pl-3 rtl:pl-0 rtl:pr-3">45%</small>
                     </div>
                     <div class="w-full px-3 border-r border-border-light dark:border-border-dark last:border-none rtl:border-r-0 rtl:border-l">
-                      <div class="radialBar-legend-series"><span class="radialBar-legend-marker secondary"></span>
-                        <p class="radialBar-legend-text text-3xs text-title">New Customers</p>
+                      <div class="radialBar-legend-series"> <span class="radialBar-legend-marker secondary"></span>
+                        <p class="2xl:line-clamp-1 2xl:hidden lg:block 2sm:hidden radialBar-legend-text text-3xs text-title">New Customers</p>
+                        <p class="2xl:line-clamp-1 hidden lg:hidden  2sm:block radialBar-legend-text text-3xs text-title">New </p>
                       </div><small class="text-xs text-content3 pl-3 rtl:pl-0 rtl:pr-3">62% </small>
                     </div>
                     <div class="w-full px-3 border-r border-border-light dark:border-border-dark last:border-none rtl:border-r-0 rtl:border-l">
-                      <div class="radialBar-legend-series"> <span class="radialBar-legend-marker title"></span>
-                        <p class="radialBar-legend-text text-3xs text-title">Retarget Customers </p>
-                      </div><small class="text-xs text-content3 pl-3 rtl:pl-0 rtl:pr-3">34%</small>
+                      <div class="radialBar-legend-series"><span class="radialBar-legend-marker title"> </span>
+                        <p class="2xl:line-clamp-1 2xl:hidden lg:block 2sm:hidden radialBar-legend-text text-3xs text-title">Retarget Customers</p>
+                        <p class="2xl:line-clamp-1 hidden lg:hidden  2sm:block radialBar-legend-text text-3xs text-title">Retarget</p>
+                      </div><small class="text-xs text-content3 pl-3 rtl:pl-0 rtl:pr-3">34% </small>
                     </div>
                   </div>
                 </div>
               </div>
             </div>
-            <div class="col-span-4 lg:col-span-12 lg:-order-1">
+            <div class="col-span-4 lg:col-span-12 lg:-order-1 recent-activity"> 
               <div class="card">
                 <div class="card-header">
                   <div class="flex justify-between w-full flex-wrap gap-2 items-center">
@@ -1565,12 +1568,12 @@
                     </div>
                   </div>
                 </div>
-                <div class="card-body">
-                  <ul class="relative before:content-[''] before:absolute before:border before:border-border-light before:w-[1px] before:h-full before:top-0 before:left-[4%] rtl:left-unset rtl:right-[4%] dark:border-border-dark"> 
-                    <li class="flex gap-4 pb-6 last:pb-0"> 
+                <div class="card-body"> 
+                  <ul class="relative before:content-[''] before:absolute before:border before:border-border-light before:w-[1px] before:h-full  before:top-0 rtl:before:bottom-0   rtl:before:right-[4%] before:left-[4%] 2xl:before:left-[6%] rtl:lg:before:right-[2%] rtl:2xl:before:right-[6%] rtl:2lg:before:right-[1.125rem] rtl:4xl:before:right-[5%] 4xl:before:left-[5%] 2lg:before:left-[1.125rem] rtl:!2lg:before:right-[1.125rem] rtl:before:right-[2%] lg:before:left-[2%] rtl:left-unset rtl:right-[4%] dark:border-border-dark"> 
+                    <li class="flex gap-4 pb-6 last:pb-0">
                       <div class="relative"><img class="min-w-[40px] h-[40px] rounded-full" src="../../assets/images/avatar/39.jpg" alt="avatar"></div>
-                      <div class="flex flex-col gap-1"><span class="text-content3 text-2xs font-bold">2hrs Ago</span>
-                        <p class="text-title font-medium">Today, I'm very happy about myself, because I realized my dreams.</p>
+                      <div class="flex flex-col gap-1"> <span class="text-content3 text-2xs font-bold">2hrs Ago</span>
+                        <p class="2xl:line-clamp-2 text-title font-medium">Today, I'm very happy about myself, because I realized my dreams.</p>
                         <ul class="flex items-center gap-2 flex-wrap"> 
                           <li> <img class="min-w-[40px] h-[40px] rounded-5" src="../../assets/images/product/18.png" alt="t-shirt"></li>
                           <li> <img class="min-w-[40px] h-[40px] rounded-5" src="../../assets/images/product/17.png" alt="shoes"></li>
@@ -1581,25 +1584,25 @@
                     <li class="flex gap-4 pb-6 last:pb-0"> 
                       <div class="relative"><img class="min-w-[40px] h-[40px] rounded-full" src="../../assets/images/avatar/40.png" alt="avatar"></div>
                       <div class="flex flex-col gap-1"><span class="text-content3 text-2xs font-bold">5hrs Ago</span>
-                        <p class="text-title font-medium">That is the key of this collection, being yourself. Don't be into trends.</p>
+                        <p class="2xl:line-clamp-2 text-title font-medium">That is the key of this collection, being yourself. Don't be into trends.</p>
                       </div>
                     </li>
                     <li class="flex gap-4 items-center pb-6 last:pb-0"> 
                       <div class="min-w-[40px]">   
                         <div class="activity-dot-secondary"></div>
                       </div>
-                      <div class="flex flex-col gap-1"><span class="text-title text-xs relative before:content-[''] before:absolute before:h-[2px] before:left-[-40%] rtl:left-unset rtl:right-[-40%] before:bg-border-light before:top-1/2 before:w-[calc(100%_-_55px)]">25 Oct,2022</span></div>
+                      <div class="flex flex-col gap-1"><span class="text-title text-xs relative before:content-[''] recent-activity-date before:absolute before:h-[2px] before:left-[-40%] rtl:left-unset rtl:before:right-[-40%] before:bg-border-light before:top-1/2 before:w-[calc(100%_-_55px)]">25 Oct,2022</span></div>
                     </li>
                     <li class="flex gap-4 pb-6 last:pb-0"> 
                       <div class="relative"><img class="min-w-[40px] h-[40px] rounded-full" src="../../assets/images/avatar/41.png" alt="avatar"></div>
                       <div class="flex flex-col gap-1"><span class="text-content3 text-2xs font-bold">10:30 pm</span>
-                        <p class="text-title font-medium">I think it's an old fashioned notion that fashion needs to be exclusive to be fashionable.</p>
+                        <p class="2xl:line-clamp-2 text-title font-medium">I think it's an old fashioned notion that fashion needs to be exclusive to be fashionable.</p>
                       </div>
                     </li>
                     <li class="flex gap-4 pb-6 last:pb-0"> 
                       <div class="relative"><img class="min-w-[40px] h-[40px] rounded-full" src="../../assets/images/avatar/42.png" alt="avatar"></div>
                       <div class="flex flex-col gap-1"><span class="text-content3 text-2xs font-bold">12:00 pm</span>
-                        <p class="text-title font-medium">If you wear clothes that don't suit you.</p>
+                        <p class="2xl:line-clamp-2 text-title font-medium">If you wear clothes that don't suit you.</p>
                       </div>
                     </li>
                   </ul>
